# Azure-IoT-Phase-1-Demo

./: CMakeLists.txt  IoTHub.md  README.md  app_manifest.json  hart_library.c  hart_library.h  main.c
